# elvy-home-assignment

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  settings.yaml
backend/src/: dependencies.py  main.py  settings.py
backend/src/exceptions/: errors.py  exception_handler.py
backend/src/models/: location.py  weather.py
backend/src/routes/: forecast.py  locations.py  weather.py
backend/src/services/: forecast_service.py  geo_utils.py  geocoding_service.py  lightning_client.py  smhi_client.py  smhi_service.py
backend/tests/routes/: conftest.py  test_locations.py  test_weather.py
backend/tests/services/: test_smhi_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AddressInput.tsx  ForecastPanel.tsx  GranularitySelector.tsx  WeatherChart.tsx
frontend/src/hooks/: useLocations.ts  useWeatherData.ts
frontend/src/types/: weather.ts
terraform/: main.tf  outputs.tf  variables.tf
