[project]
name = "smhi-weather-app"
version = "1.0.0"
description = "SMHI Weather Analytics API - Cloud cover and lightning data"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
    "scikit-learn>=1.6.0",
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.4",
    "respx>=0.22.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
